--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Hamed Baatour<hamedbaatour@gmail.com>",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,11 +13,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
     "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
+    "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.7",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
@@ -25,10 +25,11 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26",
     "express": "^4.16.3",
     "path": "^0.12.7",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "typescript": "~2.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
@@ -39,7 +40,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
-    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -50,6 +50,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
+    "enhanced-resolve": "^3.3.0",
     "typescript": "~2.7.2"
   },
   "engines": {
